RDT-19-consul-inject (#11)
* RDT-19-consul-inject

* RDT-19-consul-inject

* RDT-19-consul-inject

--- a/charts/app/templates/deployment.yaml
+++ b/charts/app/templates/deployment.yaml
@@ -38,6 +38,9 @@ spec:
         prometheus.io/port: {{ .Values.prometheus.port | quote | default "8011" }}
         prometheus.io/path: {{ .Values.prometheus.path | quote | default "/metrics" }}
     {{- end }}
+    {{- if .Values.consulinject.enabled }}
+        consul.hashicorp.com/connect-inject: "true"
+    {{- end }}
         checksum/secrets: {{ printf "%v" .Values.secrets | sha256sum }}
         checksum/conf: {{ printf "%v" .Values.configmap | sha256sum }}
       labels:
