--- a/charts/agent/values.yaml
+++ b/charts/agent/values.yaml
@@ -34,7 +34,7 @@ image:
   # Overrides the image tag whose default is the chart appVersion.
   tag: "0.88.0"
 
-imagePullSecrets: []
+imagePullSecrets: [ ]
 nameOverride: ""
 fullnameOverride: ""
 
@@ -45,14 +45,14 @@ serviceAccount:
   # If not set and create is true, a name is generated using the fullname template
   name: "collector"
   # Annotations to add to the service account
-  annotations: {}
+  annotations: { }
 
-podAnnotations: {}
+podAnnotations: { }
 
-podSecurityContext: {}
+podSecurityContext: { }
 # fsGroup: 2000
 
-securityContext: {}
+securityContext: { }
 # capabilities:
 #   drop:
 #   - ALL
@@ -192,10 +192,6 @@ config:
           statements:
             # fix duplication: replace 127.0.0.1:8888 => host.name value
             - set(attributes["service.instance.id"], attributes["host.name"]) where attributes["service.name"] == "{{ .Values.info.name }}"
-        - context: datapoint
-          statements:
-            # set label tag_project from tag_namespace for YACE metrics
-            - set(attributes["tag_project"], attributes["tag_namespace"]) where attributes["yace"] == "1" and attributes["tag_project"] == nil
     k8sattributes:
       auth_type: "serviceAccount"
       passthrough: false
@@ -312,8 +308,7 @@ config:
         ### to the end after namespace declaration
         - action: upsert
           from_attribute: service
-          key: service.name
-        # required for proper job name of target_info
+          key: service.name # required for proper job name of target_info
         - action: upsert
           from_attribute: project
           key: service.namespace
@@ -363,26 +358,26 @@ config:
     zpages:
       endpoint: :55679
   service:
-    extensions: [pprof, zpages, health_check]
+    extensions: [ pprof, zpages, health_check ]
     telemetry:
       logs:
         level: INFO
     pipelines:
       traces:
-        receivers: [otlp]
-        processors: [memory_limiter, resource, resource/tempo, batch]
-        exporters: [logging, otlp/global]
+        receivers: [ otlp ]
+        processors: [ memory_limiter, resource, resource/tempo, batch ]
+        exporters: [ logging, otlp/global ]
       metrics:
-        exporters: [logging, otlp/global]
+        exporters: [ logging, otlp/global ]
         processors:
           - memory_limiter
           - transform
           - resource
           - transform/metrics
           - batch/metrics
-        receivers: [otlp, prometheus]
+        receivers: [ otlp, prometheus ]
       logs/logfmt: &logs-pipeline
-        exporters: [logging, otlp/global]
+        exporters: [ logging, otlp/global ]
         processors:
           - memory_limiter
           - filter/non-container
@@ -393,7 +388,7 @@ config:
           - resource
           - resource/loki-labels
           - batch
-        receivers: [otlp, filelog]
+        receivers: [ otlp, filelog ]
       logs/raw:
         <<: *logs-pipeline
         processors:
@@ -408,179 +403,171 @@ config:
           - batch
 
 prometheus:
-  default:
-    enabled: true
-    # good documentation related to SD: https://docs.victoriametrics.com/sd_configs.html#kubernetes_sd_configs
-    scrape_configs: []
-  append:
-    enabled: false
-    scrape_configs: []
-  kubernetes:
-    enabled: true
-    scrape_configs:
-      # coredns
-      # https://grafana.com/grafana/dashboards/14981-coredns/
-      # dashboard ID: 14981
-      # https://grafana.com/grafana/dashboards/15762-kubernetes-system-coredns/
-      # dashboard ID: 15762
-      - job_name: coredns
-        honor_labels: false
-        kubernetes_sd_configs: &sd-pod
-          - role: pod
-            selectors:
-              - role: pod
-                # only scrape data from pods running on the same node as collector
-                field: "spec.nodeName=$NODE_NAME"
-        relabel_configs:
+    default:
+      enabled: true
+      # good documentation related to SD: https://docs.victoriametrics.com/sd_configs.html#kubernetes_sd_configs
+      scrape_configs: []
+    append:
+      enabled: false
+      scrape_configs: []
+    kubernetes:
+      enabled: true
+      scrape_configs:
+        # coredns
+        # https://grafana.com/grafana/dashboards/14981-coredns/
+        # dashboard ID: 14981
+        # https://grafana.com/grafana/dashboards/15762-kubernetes-system-coredns/
+        # dashboard ID: 15762
+        - job_name: coredns
+          honor_labels: false
+          kubernetes_sd_configs: &sd-pod
+            - role: pod
+              selectors:
+                - role: pod
+                  # only scrape data from pods running on the same node as collector
+                  field: "spec.nodeName=$NODE_NAME"
+          relabel_configs:
+            - action: keep
+              source_labels: # k8s-app: kube-dns
+                - __meta_kubernetes_pod_label_k8s_app
+                - __meta_kubernetes_pod_labelpresent_k8s_app
+              regex: (kube-dns);true
+            - source_labels: [ __address__ ]
+              action: replace
+              target_label: __address__
+              regex: (.+?)(?::\d+)?
+              replacement: $$1:9153
+            - action: drop
+              source_labels:
+                - __meta_kubernetes_pod_phase
+              regex: (Failed|Succeeded)
+            - action: replace
+              replacement: coredns
+              target_label: job_name
+        - job_name: 'kubernetes-kubelet'
+          scrape_interval: 1m
+          scheme: https
+          tls_config:
+            ca_file: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
+            insecure_skip_verify: true
+          bearer_token_file: /var/run/secrets/kubernetes.io/serviceaccount/token
+          kubernetes_sd_configs:
+            - role: node
+          relabel_configs:
+            - target_label: __address__
+              replacement: kubernetes.default.svc.cluster.local:443
+            - source_labels: [ __meta_kubernetes_node_name ]
+              regex: (.+)
+              target_label: __metrics_path__
+              replacement: /api/v1/nodes/$$1/proxy/metrics
+            - action: replace
+              replacement: kubernetes-kubelet
+              target_label: job_name
+        # search pods containing prometheus.io/scrape annotation
+        #
+        # example:
+        # prometheus.io/path: /metrics
+        # prometheus.io/port: "7777"
+        # prometheus.io/scrape: "true"
+        # prometheus.io/param: "xxx=yyy"
+        # prometheus.io/label.key: "value"
+        #
+        # example:
+        #  prometheus.io/label.origin_prometheus: "observability/com/dev"
+        # use for self-monitoring
+        # dashboard: ID: 17728 https://grafana.com/grafana/dashboards/17728-opentelemetry-collector-0-68-0-v20221229/
+        # https://grafana.com/grafana/dashboards/13332-kube-state-metrics-v2/
+        # dashboard ID: 13332
+        - job_name: kubernetes-pods
+          kubernetes_sd_configs: *sd-pod
+          honor_labels: false
+          scrape_interval: 15s
+          relabel_configs:
+            - action: keep
+              regex: true
+              source_labels:
+                - __meta_kubernetes_pod_annotation_prometheus_io_scrape
+            - action: replace
+              regex: (https?)
+              source_labels:
+                - __meta_kubernetes_pod_annotation_prometheus_io_scheme
+              target_label: __scheme__
+            - action: replace
+              regex: (.+)
+              source_labels:
+                - __meta_kubernetes_pod_annotation_prometheus_io_path
+              target_label: __metrics_path__
+            - action: replace
+              regex: (.+?)(?::\d+)?;(\d+)
+              replacement: $$1:$$2
+              source_labels:
+                - __address__
+                - __meta_kubernetes_pod_annotation_prometheus_io_port
+              target_label: __address__
+            # SRE-26 Allow to add static labels to pod metrics via pod annotations
+            # Example:
+            #   Annotation on pod "prometheus.io/label-custom-label: custom-label-value"
+            #   will be added to a metrics produced by the bod as label custom_label with value custom-label-value
+            - action: labelmap
+              regex: __meta_kubernetes_pod_annotation_prometheus_io_label_(.+)
+            - action: labelmap
+              regex: __meta_kubernetes_pod_annotation_prometheus_io_param_(.+)
+              replacement: __param_$$1
+            - action: drop
+              regex: Pending|Succeeded|Failed|Completed
+              source_labels:
+                - __meta_kubernetes_pod_phase
+            - action: replace
+              source_labels: [__meta_kubernetes_pod_label_app_kubernetes_io_component]
+              target_label: component
+            - action: replace
+              source_labels: [__meta_kubernetes_pod_container_name]
+              target_label: container
+            - action: replace
+              replacement: "$$1"
+              source_labels: [__meta_kubernetes_pod_container_name]
+              target_label: job
+            - action: replace
+              separator: "/"
+              source_labels: [__meta_kubernetes_namespace, __meta_kubernetes_pod_label_app_kubernetes_io_component]
+              target_label: job
+            - action: replace
+              replacement: kubernetes-pods
+              target_label: job_name
+        #[dashboard:ID: 15661](https://grafana.com/grafana/dashboards/15661-1-k8s-for-prometheus-dashboard-20211010/)
+        - job_name: cadvisor # daemonset_cadvisor kubernetes-cadvisor
+          bearer_token_file: /var/run/secrets/kubernetes.io/serviceaccount/token
+          kubernetes_sd_configs: [role: node]
+          metric_relabel_configs:
           - action: keep
-            # k8s-app: kube-dns
-            source_labels:
-              - __meta_kubernetes_pod_label_k8s_app
-              - __meta_kubernetes_pod_labelpresent_k8s_app
-            regex: (kube-dns);true
-          - source_labels: [__address__]
-            action: replace
-            target_label: __address__
-            regex: (.+?)(?::\d+)?
-            replacement: $$1:9153
+            source_labels: [__name__]
+            regex: container_cpu_usage_seconds_total|container_fs_limit_bytes|container_fs_usage_bytes|container_fs_writes_bytes_total|container_memory_rss|container_memory_working_set_bytes|container_network_receive_bytes_total|container_network_transmit_bytes_total|container_spec_cpu_period|container_spec_cpu_quota|container_spec_memory_limit_bytes|target_info
+          # Drop cgroup metrics with no pod.
           - action: drop
-            source_labels:
-              - __meta_kubernetes_pod_phase
-            regex: (Failed|Succeeded)
-          - action: replace
-            replacement: coredns
-            target_label: job_name
-      - job_name: 'kubernetes-kubelet'
-        scrape_interval: 1m
-        scheme: https
-        tls_config:
-          ca_file: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
-          insecure_skip_verify: true
-        bearer_token_file: /var/run/secrets/kubernetes.io/serviceaccount/token
-        kubernetes_sd_configs:
-          - role: node
-        relabel_configs:
-          - target_label: __address__
-            replacement: kubernetes.default.svc.cluster.local:443
+            regex: '.+;'
+            source_labels: [id, pod]
+          # Drop id label
+          - action: labeldrop
+            regex: ^id$
+          relabel_configs:
+          - replacement: kubernetes.default.svc.cluster.local:443
+            target_label: __address__
+          - regex: (.+)
+            replacement: /api/v1/nodes/$$1/proxy/metrics/cadvisor
+            source_labels: [__meta_kubernetes_node_name]
+            target_label: __metrics_path__
+          # Add lables
+          - action: labelmap
+            regex: __meta_kubernetes_pod_label_(.+)
           - source_labels: [__meta_kubernetes_node_name]
-            regex: (.+)
-            target_label: __metrics_path__
-            replacement: /api/v1/nodes/$$1/proxy/metrics
+            target_label: node
+          - source_labels: [__meta_kubernetes_node_name]
+            target_label: nodename
           - action: replace
-            replacement: kubernetes-kubelet
+            replacement: cadvisor
             target_label: job_name
-      # search pods containing prometheus.io/scrape annotation
-      #
-      # example:
-      # prometheus.io/path: /metrics
-      # prometheus.io/port: "7777"
-      # prometheus.io/scrape: "true"
-      # prometheus.io/param: "xxx=yyy"
-      # prometheus.io/label.key: "value"
-      #
-      # example:
-      #  prometheus.io/label.origin_prometheus: "observability/com/dev"
-      # use for self-monitoring
-      # dashboard: ID: 17728 https://grafana.com/grafana/dashboards/17728-opentelemetry-collector-0-68-0-v20221229/
-      # https://grafana.com/grafana/dashboards/13332-kube-state-metrics-v2/
-      # dashboard ID: 13332
-      - job_name: kubernetes-pods
-        kubernetes_sd_configs: *sd-pod
-        honor_labels: false
-        scrape_interval: 15s
-        metric_relabel_configs:
-        - source_labels: [__name__]
-          action: replace
-          regex: ^aws_.*
-          target_label: yace
-          replacement: 1
-        relabel_configs:
-          - action: keep
-            regex: true
-            source_labels:
-              - __meta_kubernetes_pod_annotation_prometheus_io_scrape
-          - action: replace
-            regex: (https?)
-            source_labels:
-              - __meta_kubernetes_pod_annotation_prometheus_io_scheme
-            target_label: __scheme__
-          - action: replace
-            regex: (.+)
-            source_labels:
-              - __meta_kubernetes_pod_annotation_prometheus_io_path
-            target_label: __metrics_path__
-          - action: replace
-            regex: (.+?)(?::\d+)?;(\d+)
-            replacement: $$1:$$2
-            source_labels:
-              - __address__
-              - __meta_kubernetes_pod_annotation_prometheus_io_port
-            target_label: __address__
-          # SRE-26 Allow to add static labels to pod metrics via pod annotations
-          # Example:
-          #   Annotation on pod "prometheus.io/label-custom-label: custom-label-value"
-          #   will be added to a metrics produced by the bod as label custom_label with value custom-label-value
-          - action: labelmap
-            regex: __meta_kubernetes_pod_annotation_prometheus_io_label_(.+)
-          - action: labelmap
-            regex: __meta_kubernetes_pod_annotation_prometheus_io_param_(.+)
-            replacement: __param_$$1
-          - action: drop
-            regex: Pending|Succeeded|Failed|Completed
-            source_labels:
-              - __meta_kubernetes_pod_phase
-          - action: replace
-            source_labels: [__meta_kubernetes_pod_label_app_kubernetes_io_component]
-            target_label: component
-          - action: replace
-            source_labels: [__meta_kubernetes_pod_container_name]
-            target_label: container
-          - action: replace
-            replacement: "$$1"
-            source_labels: [__meta_kubernetes_pod_container_name]
-            target_label: job
-          - action: replace
-            separator: "/"
-            source_labels: [__meta_kubernetes_namespace, __meta_kubernetes_pod_label_app_kubernetes_io_component]
-            target_label: job
-          - action: replace
-            replacement: kubernetes-pods
-            target_label: job_name
-      # [dashboard:ID: 15661](https://grafana.com/grafana/dashboards/15661-1-k8s-for-prometheus-dashboard-20211010/)
-      # daemonset_cadvisor kubernetes-cadvisor
-      - job_name: cadvisor
-        bearer_token_file: /var/run/secrets/kubernetes.io/serviceaccount/token
-        kubernetes_sd_configs: [role: node]
-        metric_relabel_configs:
-        - action: keep
-          source_labels: [__name__]
-          regex: container_cpu_usage_seconds_total|container_fs_limit_bytes|container_fs_usage_bytes|container_fs_writes_bytes_total|container_memory_rss|container_memory_working_set_bytes|container_network_receive_bytes_total|container_network_transmit_bytes_total|container_spec_cpu_period|container_spec_cpu_quota|container_spec_memory_limit_bytes|target_info
-        # Drop cgroup metrics with no pod.
-        - action: drop
-          regex: '.+;'
-          source_labels: [id, pod]
-        # Drop id label
-        - action: labeldrop
-          regex: ^id$
-        relabel_configs:
-        - replacement: kubernetes.default.svc.cluster.local:443
-          target_label: __address__
-        - regex: (.+)
-          replacement: /api/v1/nodes/$$1/proxy/metrics/cadvisor
-          source_labels: [__meta_kubernetes_node_name]
-          target_label: __metrics_path__
-        # Add lables
-        - action: labelmap
-          regex: __meta_kubernetes_pod_label_(.+)
-        - source_labels: [__meta_kubernetes_node_name]
-          target_label: node
-        - source_labels: [__meta_kubernetes_node_name]
-          target_label: nodename
-        - action: replace
-          replacement: cadvisor
-          target_label: job_name
-        scheme: https
-        scrape_interval: 1m
-        tls_config:
-          ca_file: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
-          insecure_skip_verify: true
+          scheme: https
+          scrape_interval: 1m
+          tls_config:
+            ca_file: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
+            insecure_skip_verify: true
