added .podAnnotations to deployment (#14)
* added .podAnnotations to deployment

* Update deployment.yaml

* bumpted chart version

* added stubby podAnnotations to values

--- a/charts/app/templates/deployment.yaml
+++ b/charts/app/templates/deployment.yaml
@@ -30,6 +30,9 @@ spec:
   template:
     metadata:
       annotations:
+    {{- with .Values.podAnnotations }}
+      {{- toYaml . | nindent 8 }}
+    {{- end }}      
     {{- if .Values.branch }}
         app/branch: {{ default "" .Values.branch |quote }}
     {{- end }}
