Clusterwide StorageClass-name change to make deploy another release on service in same cluster

--- a/charts/nats/templates/store.yaml
+++ b/charts/nats/templates/store.yaml
@@ -2,7 +2,7 @@
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-  name: nats-ebs-sc-gp3
+  name: "{{ .Release.Name }}-nats-ebs-sc-gp3"
   labels:
     {{- include "nats.labels" . | nindent 4 }}
 provisioner: ebs.csi.aws.com
