--- a/charts/nats/templates/certs.yaml
+++ b/charts/nats/templates/certs.yaml
@@ -2,7 +2,7 @@
 apiVersion: secrets-store.csi.x-k8s.io/v1
 kind: SecretProviderClass
 metadata:
-  name: nats-secrets
+  name: "{{ .Release.Name }}-nats-secrets"
   annotations:
     image/tag: "{{.Values.version}}"
   labels:
