--- a/charts/app/templates/deployment.yaml
+++ b/charts/app/templates/deployment.yaml
@@ -55,18 +55,21 @@ spec:
       tolerations:
 {{. | toYaml | indent 8}}
       {{- end}}
-      affinity:
+      {{- with .Values.affinity }}
+      affinity: 
+      {{- if eq .podAntiAffinity nil }}
         podAntiAffinity:
-          preferredDuringSchedulingIgnoredDuringExecution:
-          - weight: 1
-            podAffinityTerm:
-              labelSelector:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            - labelSelector:
                 matchExpressions:
-                - key: app
-                  operator: In
-                  values:
-                  - {{ $appname }}
+                  - key: app.kubernetes.io/name
+                    operator: In
+                    values:
+                      - {{ $appname }}
               topologyKey: "kubernetes.io/hostname"
+      {{- end }}
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
     {{- if .Values.serviceAccountName }}
       serviceAccountName: {{ .Values.serviceAccountName}}
     {{- else if .Values.rbac.create }}
