rev: extra options

--- a/charts/app/templates/deployment.yaml
+++ b/charts/app/templates/deployment.yaml
@@ -60,6 +60,9 @@ spec:
       {{- if eq .podAntiAffinity nil }}
         podAntiAffinity:
           preferredDuringSchedulingIgnoredDuringExecution:
+          - weight: 1
+            podAffinityTerm:
+              labelSelector:
             - labelSelector:
                 matchExpressions:
                 - key: app
