add: vpa template (#19)
* add: vpa template

* add: vpa default  values

* bump: version

* upd: fmt

* upd: pdb fmt

* fix: trailing spaces fmt

* add: vpa updatePolicy iteration

* add: vpa example values

* fix: linter issues

--- a/charts/app/values.yaml
+++ b/charts/app/values.yaml
@@ -252,8 +252,13 @@ hpa:
   cpu: 70
   memory: 70
 
+vpa:
+  enabled: false
+  apiVersion: "autoscaling.k8s.io/v1"
+
 pdb:
   enabled: false
+  apiVersion: "policy/v1beta1"
 
 configfiles: {}
   # mountPath: "/etc/app"
